--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 				margin: 0 0 0 -1px;
 				height: 100%;
 			}
-		span{
+		h1{
+			display: inline-block;
 			vertical-align: middle;
 		}
 	</style>
 </head>
 <body>
-	<span>vertical align</span>
+	<h1>Ira MOLODEC</h1>
 </body>
 </html>
